# monero

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .profile  .replit  .travis.yml  AGENTS.md  ANONYMITY_NETWORKS.md  Beta.docx  CHANGELOG.md  CMakeLists.txt  CMakeLists_IOS.txt  CONTRIBUTING  CONTRIBUTING.md  Dockerfile  Doxyfile  LEVIN_PROTOCOL.md  LICENSE  MONERO  Makefile  README  README.i18n  README.i18n.md  README.md  ReleaseNotes.txt  Top languages  VULNERABILITY_RESPONSE_PROCESS.md  ZMQ.md  build.sh  compiler.sh  docker-compose.yml  format-sources.sh  monero_steal.md  monero_steal_AjdBL.md  monero_steal_pLqla.md  run-local-boost.sh  shell.nix  snap  snapcraft.yaml  (+5 more)
contrib/otshell_utils/: CMakeLists.txt  LICENCE.txt  ccolor.cpp  ccolor.hpp  lib_common1.hpp  runoptions.cpp  runoptions.hpp  utils.cpp  utils.hpp  windows_stream.cpp  windows_stream.h
src/: CMakeLists.txt  Changelog  LICENCE.txt  cryptonote_config.h  mainpage.dox  version.cmake  version.cpp  version.cpp.in  version.h  version.h.in  version.inl.in
src/3rd/: CMakeLists.txt  boost_monero_optional.h  monero_3rd.cpp
src/async/: CMakeLists.txt  misc_utils.h  mutex.h  parent_reference_tasking_system.h  rw_lock.h  scoped_notification.h  sleepy_task_queue.cpp  sleepy_task_queue.h  task_types.cpp  task_types.h  threadpool.cpp  threadpool.h  token_queue.h  waiter_manager.cpp  waiter_manager.h
src/blockchain_converter/: CMakeLists.txt  README.md  blockchain_converter.cpp  blockchain_export.cpp  blockchain_export.h  blockchain_import.cpp  fake_core.h  import.h
src/blockchain_db/: CMakeLists.txt  blockchain_db.cpp  blockchain_db.h  blockchain_db_utils.cpp  blockchain_db_utils.h  db_types.h  locked_txn.h  testdb.h
src/blockchain_utilities/: CMakeLists.txt  README.md  blockchain-stats-readme.md  blockchain_ancestry.cpp  blockchain_and_pool.h  blockchain_blackball.cpp  blockchain_converter.cpp  blockchain_depth.cpp  blockchain_dump.cpp  blockchain_export.cpp  blockchain_find_locked.cpp  blockchain_header_stats.cpp  blockchain_import.cpp  blockchain_objects.h  blockchain_output_age.cpp  blockchain_prune.cpp  blockchain_prune_known_spent_data.cpp  blockchain_stats.cpp  blockchain_usage.cpp  blockchain_utilities.h  blocksdat_file.cpp  blocksdat_file.h  bootstrap_file.cpp  bootstrap_file.h  bootstrap_serialization.h  cn_deserialize.cpp  fake_core.h
src/blocks/: CMakeLists.txt  blockexports.c  blocks.cpp  blocks.h
src/carrot_core/: CMakeLists.txt  account_secrets.cpp  account_secrets.h  address_utils.cpp  address_utils.h  carrot_enote_scan.cpp  carrot_enote_scan.h  carrot_enote_types.cpp  carrot_enote_types.h  config.h  core_types.cpp  core_types.h  destination.cpp  destination.h  device.cpp  device.h  device_ram_borrowed.cpp  device_ram_borrowed.h  enote_record_types.h  enote_utils.cpp  enote_utils.h  exceptions.h  hash_functions.cpp  hash_functions.h  lazy_amount_commitment.cpp  lazy_amount_commitment.h  output_set_finalization.cpp  output_set_finalization.h  payment_proposal.cpp  payment_proposal.h  scan.cpp  scan.h  scan_unsafe.cpp  scan_unsafe.h  transcript_fixed.h
src/carrot_impl/: CMakeLists.txt  address_device.h  address_device_hierarchies.cpp  address_device_hierarchies.h  address_device_ram_borrowed.cpp  address_device_ram_borrowed.h  address_utils.cpp  address_utils.h  address_utils_compat.cpp  address_utils_compat.h  carrot_boost_serialization.h  carrot_chain_serialization.h  carrot_offchain_serialization.h  carrot_tx_builder_inputs.cpp  carrot_tx_builder_inputs.h  carrot_tx_builder_types.h  carrot_tx_builder_utils.cpp  carrot_tx_builder_utils.h  carrot_tx_format_utils.cpp  carrot_tx_format_utils.h  format_utils.cpp  format_utils.h  input_selection.cpp  input_selection.h  input_selection.inl  key_image_device.h  key_image_device_composed.cpp  key_image_device_composed.h  key_image_device_precomputed.cpp  key_image_device_precomputed.h  multi_tx_proposal_utils.cpp  multi_tx_proposal_utils.h  output_opening_types.cpp  output_opening_types.h  spend_device.h  spend_device_ram_borrowed.cpp  spend_device_ram_borrowed.h  subaddress_index.h  subaddress_map.h  subaddress_map_legacy.cpp  (+10 more)
src/checkpoints/: CMakeLists.txt  checkpoints.cpp  checkpoints.h
src/common/: CMakeLists.txt  aligned.c  aligned.h  apply_permutation.h  base58.cpp  base58.h  boost_serialization_helper.h  cereal_serialization_helper.h  combinator.cpp  combinator.h  command_line.cpp  command_line.h  command_line_functions.h  common_fwd.h  compress_uint.cpp  compress_uint.h  console_writer_creator.h  container_helpers.h  data_cache.h  dns_utils.cpp  dns_utils.h  download.cpp  download.h  equilibria.cpp  equilibria.h  error.cpp  error.h  exception.cpp  exception.h  exec.cpp  exec.h  exp2.cpp  exp2.h  expect.cpp  expect.h  fence.h  hash_combine.h  http_connection.h  i18n.cpp  i18n.h  (+54 more)
src/config/: README.md  common.h  cryptonote.h  mainnet.h  seeds.h  stagenet.h  testnet.h
src/connectivity_tool/: CMakeLists.txt  conn_tool.cpp
src/crypto/: CMakeLists.txt  CryptonightR_JIT.c  CryptonightR_JIT.h  CryptonightR_template.S  CryptonightR_template.h  aesb.c  aux_hash.c  aux_hash.h  blake256.c  blake256.h  blake2b.c  blake2b.h  c_threads.h  chacha.c  chacha.cpp  chacha.h  chacha8.c  chacha8.h  cn_aux.hpp  cn_conceal.cpp  cn_conceal.hpp  cn_heavy_hash.hpp  cn_heavy_hash_hard_arm.cpp  cn_heavy_hash_hard_intel.cpp  cn_slow_hash.hpp  (+76 more)
tests/: CMakeLists.txt  README.md  benchmark.cpp  benchmark.h.in  create_test_disks.sh  cryptolib.pl  cryptotest.pl  hash-target.cpp  io.h  requirements.txt  run-tests-parallel.py
translations/: CMakeLists.txt  beldex_fr.tx  generate_translations_header.c  loki.ts  loki_fr.ts  loki_it.ts  loki_sv.ts  monero.ts  monero_ar.ts  monero_de.ts  monero_el.ts  monero_es.ts  monero_fr.ts  monero_ga.ts  monero_hi.ts  monero_hr.ts  monero_is.ts  monero_it.ts  monero_ja.ts  monero_kmr.ts  monero_ko.ts  monero_nb_NO.ts  monero_ne.ts  monero_nl.ts  monero_pl.ts  monero_prt.ts  monero_pt-br.ts  monero_pt-pt.ts  monero_sk.ts  monero_sr.ts  monero_sv.ts  monero_tr.ts  monero_ur.ts  monero_zh-tw.ts  monero_zu.ts  monero_zu.ts.ts  ready
(+2174 files in other folders)
